# nix-activate

./: Cargo.toml  README.md  dist-workspace.toml  flake.nix
.github/workflows/: ci.yml  release.yml
src/: log.rs  main.rs
