[package]
name = "nix-activate"
version = "0.1.1"
authors = ["Subin Kim <sudosubin@gmail.com>"]
edition = "2024"
description = "Enable nix flake direnv from the current directory or an external flake repository"
license = "MIT"
repository = "https://github.com/sudosubin/nix-activate"

[dependencies]
colored = "^3.0.0"
git-url-parse = "^0.4.5"
git2 = { version = "^0.20.1", default-features = false }
url = { version = "*", features = ["std"] }

[profile.release]
opt-level = "z"
strip = true
lto = true
codegen-units = 1
panic = "abort"

[profile.dist]
inherits = "release"
